--- a/.gitattributes
+++ b/.gitattributes
@@ -1,3 +1,2 @@
-# Auto detect text files and perform LF normalization
-* text=auto
-public/* linguist-vendored
+* linguist-vendored
+*.js linguist-vendored=false
