--- a/config/config.json
+++ b/config/config.json
@@ -1,14 +1,17 @@
 {
   "development": {
     "dialect": "sqlite",
-    "storage": "library.db"
+    "storage": "library.db",
+    "logging": false
   },
   "test": {
     "dialect": "sqlite",
-    "storage": "test.db"
+    "storage": "test.db",
+    "logging": false
   },
   "production": {
     "dialect": "sqlite",
-    "storage": "production.db"
+    "storage": "production.db",
+    "logging": false
   }
 }
